# dictionarium_vilnensis

./: Cargo.toml
src/: lib.rs
