[package]
name = "dictionarium_vilnensis"
version = "0.1.0"

authors = ["Jakub Adam Wieczorek <jakub.adam.wieczorek@gmail.com>"]

edition = "2018"

[dependencies]
backoff = "*"
backoff-futures = { git = "https://github.com/jakubadamw/backoff-futures.git" }
better-panic = "*"
console = "*"
cookie = { version = "*", features = ["percent-encode"] }
env_logger = "*"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
http = "*"
hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git" }
indicatif = "*"
iron = "*"
itertools = "*"
log = "*"
logger = "*"
mime = "*"
num = "*"
postgres = "*"
rand = "*"
reduce = "*"
regex = "*"
router = "*"
select = "*"
time = "*"
tokio = { git = "https://github.com/tokio-rs/tokio" }
url = "*"
urlencoded = "*"

[dev-dependencies]
clippy = "*"
