[package]
name = "dictionarium_vilnensis"
version = "0.1.0"

authors = ["Jakub Adam Wieczorek <jakub.adam.wieczorek@gmail.com>"]

edition = "2018"

[dependencies]
backoff = "0.1"
backoff-futures = "0.1"
better-panic = "0.1"
cookie = { version = "*", features = ["percent-encode"] }
env_logger = "0.6"
futures-preview = "=0.3.0-alpha.18"
http = "0.1"
indicatif = "0.11"
isahc = "0.7"
itertools = "0.8"
mime = "0.3"
num = "0.2"
rand = "0.7"
regex = "1.2"
select = "0.4"
time = "0.1"
tokio = "0.2.0-alpha.1"
url = "2.1"
urlencoded = "0.6"

[dev-dependencies]
clippy = "*"
